--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primereact": "^5.0.0-rc.2",
     "react": "^16.13.1",
